--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -45,6 +45,7 @@
     "@types/react": "~19.0.14",
     "del-cli": "^6.0.0",
     "eslint": "^9.33.0",
+    "eslint-plugin-expo": "^0.1.4",
     "globals": "^16.3.0",
     "typescript": "~5.8.3"
   }
