ci: set xcode version
Signed-off-by: Guillaume Bonnet <mrsquaare@mrsquaare.fr>

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -81,6 +81,9 @@ jobs:
       - name: Setup environment
         uses: ./.github/actions/setup-env
 
+      - name: Set Xcode version
+        run: sudo xcode-select --switch "/Applications/Xcode_16.4.app/Contents/Developer"
+
       - name: Generate prebuild
         working-directory: ./apps/mobile
         run: pnpm expo prebuild --platform ios --clean
