--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -47,6 +47,7 @@
     "eslint": "^9.33.0",
     "eslint-plugin-expo": "^0.1.4",
     "globals": "^16.3.0",
+    "tsx": "^4.20.4",
     "typescript": "~5.8.3"
   }
 }
