ci: add export step for mobile checks, update gradle cache key, add app build cache for android build
Signed-off-by: Guillaume Bonnet <mrsquaare@mrsquaare.fr>

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -38,6 +38,10 @@ jobs:
       - name: Setup environment
         uses: ./.github/actions/setup-env
 
+      - name: Export
+        working-directory: ./apps/mobile
+        run: pnpm export
+
       - name: Lint
         working-directory: ./apps/mobile
         run: pnpm lint
@@ -68,9 +72,17 @@ jobs:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('apps/mobile/android/*.gradle*', 'apps/mobile/android/gradle-wrapper.properties') }}
+          key: ${{ runner.os }}-gradle-${{ hashFiles('apps/mobile/app.config.ts', 'apps/mobile/android/**/*.gradle*', 'apps/mobile/android/**/gradle.properties', 'apps/mobile/android/**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
+
+      - name: Cache App Build
+        uses: actions/cache@v4
+        with:
+          path: apps/mobile/android/app/build
+          key: ${{ runner.os }}-appbuild-${{ hashFiles('apps/mobile/app.config.ts', 'apps/mobile/android/**/*.gradle*', 'apps/mobile/android/**/gradle.properties', 'apps/mobile/android/**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-appbuild-
 
       - name: Build
         working-directory: ./apps/mobile/android
