--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -66,23 +66,10 @@ jobs:
           distribution: zulu
           java-version: 17
 
-      - name: Cache Gradle
-        uses: actions/cache@v4
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
         with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('apps/mobile/app.config.ts', 'apps/mobile/android/**/*.gradle*', 'apps/mobile/android/**/gradle.properties', 'apps/mobile/android/**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-      - name: Cache App Build
-        uses: actions/cache@v4
-        with:
-          path: apps/mobile/android/app/build
-          key: ${{ runner.os }}-appbuild-${{ hashFiles('apps/mobile/app.config.ts', 'apps/mobile/android/**/*.gradle*', 'apps/mobile/android/**/gradle.properties', 'apps/mobile/android/**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-appbuild-
+          cache-read-only: false
 
       - name: Build
         working-directory: ./apps/mobile/android
