--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -11,7 +11,7 @@ concurrency:
 
 jobs:
   server-checks:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
         with:
@@ -47,7 +47,7 @@ jobs:
         run: pnpm lint
 
   mobile-android-build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v5
         with:
@@ -56,24 +56,41 @@ jobs:
       - name: Setup environment
         uses: ./.github/actions/setup-env
 
+      - name: Get fingerprint
+        id: fingerprint
+        run: |
+          echo "hash=$(pnpm dlx @expo/fingerprint fingerprint:generate --platform android | jq -r '.hash')" >> $GITHUB_OUTPUT
+
       - name: Generate prebuild
         working-directory: ./apps/mobile
         run: pnpm expo prebuild --platform android --clean --no-install
 
-      - name: Setup Java
-        uses: actions/setup-java@v4
+      - name: Cache Gradle
+        uses: actions/cache@v4
+        id: gradle
         with:
-          distribution: zulu
-          java-version: 17
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ steps.fingerprint.outputs.hash }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
 
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
+      - name: Cache Build
+        uses: actions/cache@v4
+        id: build
         with:
-          cache-read-only: false
+          path: |
+            apps/mobile/android/build
+            apps/mobile/android/app/build
+          key: ${{ runner.os }}-build-${{ steps.fingerprint.outputs.hash }}
+          restore-keys: |
+            ${{ runner.os }}-build-
 
       - name: Build
         working-directory: ./apps/mobile/android
-        run: ./gradlew assembleDebug
+        if: steps.gradle.outputs.cache-hit != 'true' || steps.build.outputs.cache-hit != 'true'
+        run: ./gradlew assembleDebug --build-cache --parallel
 
   mobile-ios-build:
     runs-on: macos-15
@@ -88,15 +105,21 @@ jobs:
       - name: Set Xcode version
         run: sudo xcode-select --switch "/Applications/Xcode_16.4.app/Contents/Developer"
 
+      - name: Get fingerprint
+        id: fingerprint
+        run: |
+          echo "hash=$(pnpm dlx @expo/fingerprint fingerprint:generate --platform ios | jq -r '.hash')" >> $GITHUB_OUTPUT
+
       - name: Generate prebuild
         working-directory: ./apps/mobile
         run: pnpm expo prebuild --platform ios --clean --no-install
 
-      - name: Restore CocoaPods Cache
-        uses: actions/cache/restore@v4
+      - name: CocoaPods Cache
+        uses: actions/cache@v4
+        id: pods
         with:
           path: apps/mobile/ios/Pods
-          key: ${{ runner.os }}-pods-${{ hashFiles('apps/mobile/ios/Podfile.lock') }}
+          key: ${{ runner.os }}-pods-${{ steps.fingerprint.outputs.hash }}
           restore-keys: |
             ${{ runner.os }}-pods-
 
@@ -104,20 +127,16 @@ jobs:
         working-directory: ./apps/mobile/ios
         run: pod install
 
-      - name: Save CocoaPods Cache
-        uses: actions/cache/save@v4
-        with:
-          path: apps/mobile/ios/Pods
-          key: ${{ runner.os }}-pods-${{ hashFiles('apps/mobile/ios/Podfile.lock') }}
-
       - name: Cache Xcode derived data
         uses: actions/cache@v4
+        id: xcode-derived-data
         with:
           path: apps/mobile/ios/build
-          key: ${{ runner.os }}-xcode-deriveddata-${{ hashFiles('apps/mobile/app.config.ts', 'apps/mobile/ios/Podfile.lock') }}
+          key: ${{ runner.os }}-xcode-derived-data-${{ steps.fingerprint.outputs.hash }}
           restore-keys: |
-            ${{ runner.os }}-xcode-deriveddata-
+            ${{ runner.os }}-xcode-derived-data-
 
       - name: Build
         working-directory: ./apps/mobile/ios
+        if: steps.pods.outputs.cache-hit != 'true' || steps.xcode-derived-data.outputs.cache-hit != 'true'
         run: set -o pipefail && xcodebuild build -workspace Lobbium.xcworkspace -scheme Lobbium -configuration Debug -destination "generic/platform=iOS Simulator" -derivedDataPath build | xcbeautify
