--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -57,6 +57,7 @@ jobs:
         uses: ./.github/actions/setup-env
 
       - name: Get fingerprint
+        working-directory: ./apps/mobile
         id: fingerprint
         run: |
           echo "hash=$(pnpm dlx @expo/fingerprint fingerprint:generate --platform android | jq -r '.hash')" >> $GITHUB_OUTPUT
@@ -106,6 +107,7 @@ jobs:
         run: sudo xcode-select --switch "/Applications/Xcode_16.4.app/Contents/Developer"
 
       - name: Get fingerprint
+        working-directory: ./apps/mobile
         id: fingerprint
         run: |
           echo "hash=$(pnpm dlx @expo/fingerprint fingerprint:generate --platform ios | jq -r '.hash')" >> $GITHUB_OUTPUT
